<resources>
    <string name="app_name">drc</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="sort_types">
            <item>best</item>
            <item>top</item>
            <item>new</item>
            <item>hot</item>
            <item>contr.</item>
            <item>old</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sort_by">Sort by:</string>
    <string name="sort">Sort</string>
    <string name="more_comments">more comments...</string>
    <string name="navigation">Navigation</string>
    <string name="manual_search_subreddit">Manually search subreddits</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="front">Front</string>
    <string name="subreddits">Subreddits</string>
    <string name="all">/r/all</string>
    <string name="options">Options</string>
    <string name="loading">Loading...</string>
    <string name="reply_button">Reply</string>
    <string name="cancel_button">Cancel</string>
    <string name="sort_hot">hot</string>
    <string name="sort_new">new</string>
    <string name="sort_rising">rising</string>
    <string name="sort_controversial">controversial</string>
    <string name="sort_top">top</string>
    <string name="sort_best">best</string>
    <string name="sort_old">old</string>
    <string name="user">User</string>
    <string name="subreddit">Subreddit</string>
    <string name="enter_subreddit">Enter a subreddit</string>
    <string name="view_button">View</string>
    <string name="my_subreddits">My Subreddits</string>
</resources>
