<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_frontpage"
            android:title="@string/front" />
        <item
            android:id="@+id/drawer_subreddits"
            android:title="@string/my_subreddits" />
        <item
            android:id="@+id/drawer_all"
            android:title="@string/all" />
        <item
            android:id="@+id/drawer_user"
            android:title="@string/user" />
        <item
            android:id="@+id/drawer_subreddit"
            android:title="@string/subreddit" />
        <item
            android:id="@+id/drawer_options"
            android:title="@string/options" />
        <item
            android:id="@+id/drawer_login"
            android:title="@string/login" />
        <item
            android:id="@+id/drawer_logout"
            android:title="@string/logout" />
    </group>

</menu>