<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_search"
        android:title="@string/manual_search_subreddit"
        android:icon="@drawable/ic_search_white_24dp"
        yourapp:showAsAction="ifRoom|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/login"
        android:title="@string/login"/>

    <item android:id="@+id/logout"
        android:title="@string/logout"/>

    <item android:title="Sort"
        android:id="@+id/sort_submenu"
        android:visible="false">
        <menu>
            <item android:id="@+id/sort_hot"
                android:title="hot" />
            <item android:id="@+id/sort_new"
                android:title="new" />
            <item android:id="@+id/sort_top"
                android:title="top" />
        </menu>
    </item>

    <item android:title="Submit"
        android:id="@+id/submit_menu_item"
        android:visible="false" />

    <item android:id="@+id/refresh_button"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        yourapp:showAsAction="always"/>

    <!--<item android:id="@+id/sortSpinner"
        android:title="Sort"
        yourapp:showAsAction="always"
        yourapp:actionViewClass="android.widget.Spinner" />-->
</menu>