<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="?commentBackgroundPrimary"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_subreddit"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subreddit_query"
        android:layout_below="@+id/dialog_label"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subreddit_view_button"
        android:layout_below="@id/subreddit_query"
        android:text="@string/view_button"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subreddit_cancel_button"
        android:layout_below="@+id/subreddit_query"
        android:text="@string/cancel_button"
        android:layout_toEndOf="@+id/subreddit_view_button"/>


</RelativeLayout>